force-app/main/default/staticresources/python/Disappear/src/objects/SubmissionCycle__c.object
<CustomObject>
    <description>record name will be PubId-{0000000}-SubCycle-{00}</description>
    <fields>
        <fullName>CumulativeME__c</fullName>
        <label>Cumulative ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipLabel>Submission Cycles</relationshipLabel>
        <relationshipName>Submission_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Submission Cycles</relationshipLabel>
        <relationshipName>Submission_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlannedME__c</fullName>
        <label>Planned ME</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Submission Cycles</relationshipLabel>
        <relationshipName>Submission_Cycles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScopeOfWork__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Scope Of Work for a publication is stored at the Publication level
as per demo 4 to business.
This field will not be used.
Please do not store any data here</description>
        <label>Scope Of Work</label>
        <referenceTo>MEScopeOfWork__c</referenceTo>
        <relationshipLabel>Submission Cycles</relationshipLabel>
        <relationshipName>Submission_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle_Num__c</fullName>
        <label>Submission Cycle #</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetLabelFormula__c</fullName>
        <formula>IF( TEXT(Target_Type__c) = &quot;meeting&quot;,  Meeting__r.MeetingName255__c ,  Journal__r.JournalName255__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <picklist>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Submission Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-055069</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SubmissionCycle_Target_Update</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>TargetLabelFormula__c</columns>
        <columns>Target_Type__c</columns>
        <columns>Journal__c</columns>
        <columns>Meeting__c</columns>
        <columns>ScopeOfWork__c</columns>
        <columns>Submission_Cycle_Num__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication__c</field>
            <operation>equals</operation>
            <value>Pub-Id-072736</value>
        </filters>
        <label>SubmissionCycle Target Update</label>
    </listViews>
    <nameField>
        <label>Submission Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>